[bumpversion]
current_version = 0.4.21
commit = True
tag = True

[bumpversion:file:setup.py]
search = version \= "{current_version}"
replace = {new_version}

[bumpversion:file:deeplearning2020/__init__.py]
search = __version__ \= "{current_version}"
replace = {new_version}

[bdist_wheel]
universal = 1

[metadata]
description-file = PACKAGE.rst

[flake8]
exclude = docs
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
files = deeplearning2020,tests
ignore_missing_imports = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
no_warn_unused_configs = true
warn_unused_configs = true
disallow_untyped_decorators = true

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -n auto
testpaths = tests/
